--- a/eVotingUI/index.html
+++ b/eVotingUI/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>eVoting System</title>
+<title>eVoting </title>
 <meta name="description" content="Place to put your description text">
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
