--- a/eVotingUI/about.html
+++ b/eVotingUI/about.html
@@ -111,8 +111,8 @@
           <h4>Ilir Gashi</h4>
           <ul>
             <li>
-              <p><a href="#"><strong>Partia Demokratike e Kosovës</strong></a><br />
-                Email: <a href="contact.html">ilirgashi@gmail.com</a></p>
+              <p><a href="#"><strong>Kryetare e KQZ-së</strong></a><br />
+                Email: <a href="contact.html">valdetedaka@gmail.com</a></p>
             </li>
           </ul>
         </section>
@@ -123,7 +123,7 @@
           <h4>Florian Dushi</h4>
           <ul>
             <li>
-              <p><a href="#"><strong>Lidhhja Demokratike e Kosovës</strong></a><br />
+              <p><a href="#"><strong>Nën-kryetar i KQZ-së</strong></a><br />
                 Email: <a href="contact.html">floriandushi@gmail.com</a></p>
             </li>
           </ul>
@@ -135,8 +135,8 @@
           <h4>valdete daka</h4>
           <ul>
             <li>
-              <p><a href="#"><strong>VetëVendosje</strong></a><br />
-                Email: <a href="contact.html">valdetedaka@gmail.com</a></p>
+              <p><a href="#"><strong>Sekretar i KQZ-së</strong></a><br />
+                Email: <a href="contact.html">ilirgashi@gmail.com</a></p>
             </li>
           </ul>
         </section>
