--- a/eVotingUI/dashboard.html
+++ b/eVotingUI/dashboard.html
@@ -98,7 +98,7 @@
 												<!--begin::Name-->
 												<div class="d-none d-md-flex flex-column align-items-end justify-content-center me-2 me-md-4">
 													<span class="text-white opacity-75 fs-8 fw-bold lh-1 mb-1">Signed In</span>
-													<span class="text-white fs-8 fw-bolder lh-1">kukadion1@gmail.com</span>
+													<span class="text-white fs-8 fw-bolder lh-1" id="emailSpace"></span>
 												</div>
 												<!--end::Name-->
 											</div>
