--- a/eVotingUI/Vote.html
+++ b/eVotingUI/Vote.html
@@ -1,67 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eVoting</title>
-    <link rel="shortcut icon" href="images/logoIco.ico" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/vote.css">
+  <meta charset="UTF-8">
+  <title>eVoting </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/vote.css">
+  <meta name="description" content="Place to put your description text">
+  <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/screen.css">
+  <link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="screen" />
+
+  <style>
+    .slides img {
+      width: 100%;
+      object-fit: cover;
+    }
+  </style>
+  <link rel="shortcut icon" href="images/kqzLogo.png">
+  <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+
+  <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
-        <div class="container-fluid">
-          <img src="./images/Logo.png" style="width: 80px;" />
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Vote.html">Vote</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="VoteCounts.html">Counted Votes</a>
-              </li>
-            </ul>
+  <div id="header">
+    <div class="container">
+      <!-- Header | Logo, Menu
+      ================================================== -->
+      <div class="logo"><a href="index.html"><img style="width: 80px;" src="images/kqzLogo.png" alt="" /></a></div>
+      <div class="mainmenu">
+        <div id="mainmenu">
+          <ul class="sf-menu">
+            <li><a href="index.html" id="visited">Vote</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <!-- mainmenu ends here -->
+
+        <!-- Responsive Menu -->
+        <form id="responsive-menu" action="#" method="post">
+          <select>
+            <option value="">Navigation</option>
+            <option value="index.html">Home</option>
+            <option value="about.html">About</option>
+            <option value="contact.html">Contact</option>
+          </select>
+        </form>
+      </div>
+      <!-- mainmenu ends here -->
+    </div>
+    <!-- container ends here -->
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 mt-3">
+        <div class="borderBox">
+          <div class="row m-0" id="candidatesRow">
+
           </div>
         </div>
-      </nav>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 mt-3" >
-                <div class="borderBox">
-                    <div class="row m-0" id="candidatesRow">
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 mt-4" >
-                <div class="borderBox" >
-                    <div class="row m-0" id="partiesRow">
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-9 mt-4">
-                <div class="borderBox">
-                    <div class="row m-0" id="candidateCheckboxes">
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-12 text-end mb-5">
-                <button type="button" class="btn btn-primary" id="btnVote">Vote</button>
-            </div>
+      </div>
+      <div class="col-lg-3 mt-4">
+        <div class="borderBox">
+          <div class="row m-0" id="partiesRow">
+          </div>
         </div>
+      </div>
+      <div class="col-lg-9 mt-4">
+        <div class="borderBox">
+          <div class="row m-0" id="candidateCheckboxes">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-12 text-end mb-5">
+        <button type="button" class="btn btn-primary" id="btnVote">VOTE</button>
+      </div>
     </div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="js/vote.js"></script>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="js/vote.js"></script>
 </body>
+
 </html>
